# internal/service/entity/challenge.go
@@ -1,0 +1,6 @@
+package entity
+
+type Challenge struct {
+	Task       string `json:"task"`
+	Difficulty int    `json:"difficulty"`
+}
